# texcret

./: .gitignore  .pre-commit-hooks.yaml  README.md  app.py  app.sh  check-stable.sh  cli.sh  pyproject.toml  sample.md  texcrets_cli.py  web.py  web.sh
.github/workflows/: static.yml
public/: bridge.html  demo.html  index.html  texcret.js
texcret/: cli.py  constants.py  pinentry.py  utils.py
texcret/commands/: __init__.py  decrypt.py  detexcret.py  encrypt.py  list_secrets.py  load_secrets.py  texcret.py
