[project]
name = "texcret"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.120.0",
    "fido2[pcsc]>=2.0.0",
    "rich>=14.2.0",
    "typer[all]>=0.20.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
packages = ['texcret']

[project.scripts]
texcret = "texcret.cli:app"
